Video Container fix Container Style on Mobile

--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-video-container.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-video-container.scss
@@ -159,6 +159,8 @@ $background-color_4: var( --dm-video-color-primary );
       bottom: 0;
       background: linear-gradient(to top, rgba(0, 0, 0, .75), transparent);
       width: 100%;
+      left: 0;
+      right: 0; 
       aspect-ratio: 6 / 1;
       z-index: -1;
       pointer-events: none;
